<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logos"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/company_logo"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_below="@id/company_logo"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:hint="@string/enter_first_name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawableLeft="@drawable/ic_account_box_white" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textCapSentences"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:drawableStart="@drawable/ic_emai_whitel"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_emai_whitel" />

    <EditText
        android:id="@+id/birthday"
        android:drawableStart="@drawable/ic_date_range_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/enter_date_of_birth"
        android:drawableLeft="@drawable/ic_date_range_white" />

    <EditText
        android:id="@+id/phone"
        android:drawableStart="@drawable/ic_phone_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_phone_white" />

    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_toEndOf="@id/phone"
        android:layout_toRightOf="@id/phone" />

    <EditText
        android:id="@+id/password"
        android:drawableStart="@drawable/ic_password_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_below="@id/phone"
        android:ems="10"
        android:drawableLeft="@drawable/ic_password_white" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_below="@id/phone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <CheckBox
        android:id="@+id/conditions"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:text="@string/accept_terms_and_conditions"
        android:checked="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:text="@string/create_account"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@android:color/white"
        android:layout_centerHorizontal="true"
        android:onClick="createAccount"/>


</RelativeLayout>